# file_yeet

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
client/: Cargo.toml
client/src/: core.rs  gui.rs  intervals.rs  logging.rs  main.rs  settings.rs  win_cmd.rs
client/src/core/: intervals.rs  mod.rs
client/src/gui/: confirmation.rs  debug_state.rs  fonts.rs  mod.rs  publish.rs  strings.rs  subscriptions.rs  transfers.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
