[package]
name = "file_yeet_client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crab_nat = { version = "0.7", features = ["tracing"] }
dirs = "6.0"
displaydoc = "0.2"
faster-hex = "0.10"
file_yeet_shared = { path = "../shared" }
futures-channel = "0.3"
futures-util = "0.3"
human_bytes = { version = "0.4", features = ["fast"] }
iced = { version = "0.13", features = ["tokio"] }
netdev = "0.39"
nonempty = "0.12"
open = "5.3"
quinn = "0.11"
rand = "0.9"
regex = "1.12"
rfd = "0.16"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

# Handle special case of windows-rs crate.
[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
