[package]
name = "file_yeet_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
displaydoc = "0.2.4"
faster-hex = "0.9.0"
file_yeet_shared = { path = "../shared" }
futures-util = "0.3.30"
quinn = "0.10.2"
rustls = { version = "0.21.10", features = ["dangerous_configuration", "quic"] }
smallvec = "1.13.1"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
