[package]
name = "file_yeet_server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
displaydoc = "0.2"
faster-hex = "0.9"
file_yeet_shared = { path = "../shared" }
futures-util = "0.3"
quinn = "0.10"
rand = "0.8"
rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
