[package]
name = "file_yeet_server"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
displaydoc = "0.2"
file_yeet_shared = { path = "../shared" }
futures-util = "0.3"
quinn = "0.11"
rand = "0.9"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
