[package]
name = "file_yeet_shared"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
bytes = "1.11"
faster-hex = "0.10"
num_enum = "0.7"
quinn = "0.11"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = "1.49"
